# RAG-MULTIMODEL

RAG-PROJECT/: README.md  config.yaml  custom_document_index.py  pyproject.toml  quick_start.sh  web_app.py
RAG-PROJECT/src/: config.py  hybrid_search.py  index.py  milvus_store.py
RAG-PROJECT/static/: app.js  index.html  styles.css  updates.html  welcome.html
