[project]
name = "rag-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.5.0",
    "docling[vision]>=2.69.1",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.115.0",
    "langchain-core>=1.2.7",
    "langchain-docling>=2.0.0",
    "langchain-huggingface>=1.2.0",
    "langchain-milvus>=0.3.3",
    "loguru>=0.7.3",
    "ollama>=0.6.1",
    "pymilvus>=2.6.6",
    "python-multipart>=0.0.12",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.2.0",
    "sentencepiece>=0.2.1",
    "timm>=1.0.24",
    "toon-python>=0.1.2",
    "torch>=2.9.1",
    "transformers>=4.57.6",
    "uvicorn[standard]>=0.32.0",
]
